# StreamPay-Contracts

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: api-quickstart.md  audit-preparation.md  authorization.md  cli-usage.md  code-style.md  data-types.md  deployment-guide.md  entrypoint-reference.md  error-handling.md  event-reference.md  examples-advanced.md  examples-basic.md  faq.md  frontend-integration.md  gas-and-fees.md  glossary.md  governance.md  migration-guide.md  observability.md  performance-notes.md  property-tests.md  release-process.md  resource-limits.md  state-transitions.md  testing-guide.md  testnet-deployment.md  ttl-and-rent.md  versioning.md
docs/adr/: 0001-use-soroban-sdk-21-x.md  0002-compile-as-a-cdylib-for-wasm32.md  0004-separate-instance-and-persistent-storage.md  0007-establish-an-event-naming-convention.md  0009-use-checked-arithmetic-for-all-math.md  0010-represent-token-amounts-as-i128.md  0011-introduce-an-admin-role.md  0016-standardize-the-unit-test-module-layout.md  0017-use-testutils-for-contract-tests.md  0018-test-against-a-mock-token-contract.md  0020-optimize-the-release-wasm-binary.md  0023-license-the-contract-under-mit.md  0030-handle-expiry-and-deadlines-explicitly.md  0036-define-documentation-standards.md  0037-set-up-a-ci-approach-for-tests.md  0038-prepare-artifacts-for-a-security-audit.md  0040-provide-read-only-view-getters.md
src/: constants.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs  vesting.rs
test_snapshots/test/: test_set_admin_succeeds.1.json  (+61 more)
