[package]
name = "streampay-contract"
version = "0.1.0"
edition = "2021"
authors = ["arisu6804 <arisu6804@gmail.com>"]
description = "StreamPay: a real-time payment-streaming smart contract for Stellar (Soroban)."
license = "MIT"
repository = ""
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21"

[dev-dependencies]
soroban-sdk = { version = "21", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
